Add comprehensive documentation and .env.example for public repo
- Full README with setup instructions, auto-account docs, nginx config
- Complete .env.example with all configuration options
- CI/CD workflow for self-hosted deployment

--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,47 @@
+# =============================================================================
+# REQUIRED CONFIGURATION
+# =============================================================================
+
 # Admin password for the /admin panel
 ADMIN_PASSWORD=changeme
 
-# Session secret (auto-generated if not set)
+# Session secret for secure cookies (generate with: openssl rand -hex 32)
 SESSION_SECRET=
 
 # Database path (inside container)
 DB_PATH=/app/data/blaha.db
+
+# =============================================================================
+# OPTIONAL: BASIC AUTH (nginx level protection)
+# =============================================================================
+
+# Optional basic auth credentials for nginx (adds extra security layer)
+BASIC_AUTH_USER=
+BASIC_AUTH_PASS=
+
+# =============================================================================
+# OPTIONAL: PLEX INTEGRATION (Auto-account creation)
+# =============================================================================
+
+# Get your Plex token from: https://plex.tv/devices.xml
+# Look for token= attribute in your server's entry
+PLEX_TOKEN=
+
+# Your Plex server URL (use docker host IP if running in container)
+PLEX_URL=http://172.17.0.1:32400
+
+# =============================================================================
+# OPTIONAL: OMBI INTEGRATION (Auto-account creation)
+# =============================================================================
+
+# Get API key from: Ombi > Settings > Configuration > General
+OMBI_URL=http://172.17.0.1:3579
+OMBI_API_KEY=
+
+# =============================================================================
+# OPTIONAL: JELLYFIN INTEGRATION (Auto-account creation)
+# =============================================================================
+
+# Get API key from: Jellyfin > Dashboard > Administration > API Keys
+JELLYFIN_URL=http://172.17.0.1:8096
+JELLYFIN_API_KEY=
